--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>  <!-- Use the latest version -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
