--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.username=randomuser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4o
+spring.ai.openai.chat.options.temperature=0.7
+spring.ai.openai.chat.options.max-completion-tokens=1000
+
+
+
 
